loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:6: error: not found: value x
    x=x+1
    ^Poucet2:9: error: not found: value x
  if(x<2){
     ^